--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title> 1bryon1.github.io</title>
 	</head>
 	<body>
-		<p>Hello word this is my first commit</p>
+		<h1>bryon volmer</h1>
 	</body>
 </html>
