--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCSTYPE>
 <html>
+<head>
+<link rel="stylesheet" type="css.css" href="theme.css">
+<link rel="stylesheet" tpe="normalize.css">
+</head>
 	<head>
 	<h1><strong>Bryon Volmer</strong></h1>
 		<ul>
@@ -60,4 +64,3 @@
    </table>
 </head>
 </html>
-
