--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="css.css" href="theme.css">
-<link rel="stylesheet" tpe="normalize.css">
+<link rel="stylesheet" type="normalize.css">
 </head>
 	<head>
 	<h1><strong>Bryon Volmer</strong></h1>
