getting readi to float main + sidebars

--- a/template.html
+++ b/template.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="navigation.css">
 	</head>
 	<body>
-		<ul>
+		<ul class="horizontal-nav clearfix">
 			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
 			<li>
 				<ul>
@@ -16,6 +16,12 @@
 					<li><a href="http://1bryon1.github.io/blog">Blog</a></li>
 					<li><a href="http://1bryon1.github.io/contact">Contact</a></li>
 				</ul>
+				<div id="main">
+					this is main
+				</div>
+				<div id="sidebar">
+					this is sidebar
+				</div>
 			</li>
 		</ul>
 	</body>
