--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		</li>
 	</ul>	
 	<p>
-		<h1>"About Me"
+		<h2>"About Me"</h2>
 		<li><strong>History</strong> - Over 23 years in various roles throught the hospitality industry. These range from Hotel (front office/back of house); Special Event coordination which includes Grand Opening celebations, "building out" temporary warehouses for 50 day events; and transportation logistics from airport to destination locations.
 	
      <p>
