--- a/template.html
+++ b/template.html
@@ -12,17 +12,20 @@
 			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
 			<li>
 				<ul>
-					<li><a href="http://1bryon1.github.io/about bryon.html">About me</a></li>
+					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
 					<li><a href="http://1bryon1.github.io/blog">Blog</a></li>
 					<li><a href="http://1bryon1.github.io/contact">Contact</a></li>
+					<li><a href="htttp://1bryon1.github.io/bands">Bands</a></li>
+					<li><a href="http://1bryon1.github.io/food">Food</a></li>
+					<li><a href="http://1bryon1.github.io/githelp">Git 101</a></li>
 				</ul>
 			</li>
 		</ul>
 		<div id="main">
-					this is main
-				</div>
-				<div id="sidebar">
-					this is sidebar
-				</div>
+			this is main
+		</div>
+		<div id="sidebar">
+			this is sidebar
+		</div>
 	</body>
 </html>
