adding aboutme.html, and food,html other vaarrious adjustments

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css.css">
 	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<body>
-	<h1><strong>Bryon Volmer</strong></h1>
+	<body><h1>Bryon Volmer</h1></body>
 		<ul>
 			<li>1bryon1
 			<li>1bryon1@users.noreply.github.com
