--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<li>1bryon1
 			<li>1bryon1@users.noreply.github.com
       		<li><a href="https://github.com/1bryon1/1bryon1.github.io"> Git Hub address from 1bryon1</a>
-      		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/index2.html"> Git Hub HTML</a>
+      		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/index.html"> Git Hub HTML</a>
       		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/css.css"> Git Hub CSS</a>
       		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/food.html"> Git Hub Food</a>
       		<li><a href+"https://github.com/1bryon1/1bryon1.github.io/blob/master/githelp.html"> Git Hub Help</a>
