--- a/template.html
+++ b/template.html
@@ -14,11 +14,11 @@
 			<li>
 				<ul>
 					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
-					<li><a href="http://1bryon1.github.io/blog">Blog</a></li>
-					<li><a href="http://1bryon1.github.io/contact">Contact</a></li>
-					<li><a href="htttp://1bryon1.github.io/bands">Bands</a></li>
-					<li><a href="http://1bryon1.github.io/food">Food</a></li>
-					<li><a href="http://1bryon1.github.io/githelp">Git 101</a></li>
+					<li><a href="http://1bryon1.github.io/blog.html">Blog</a></li>
+					<li><a href="http://1bryon1.github.io/contact.html">Contact</a></li>
+					<li><a href="http://1bryon1.github.io/bands.html">Bands</a></li>
+					<li><a href="http://1bryon1.github.io/food.html">Food</a></li>
+					<li><a href="http://1bryon1.github.io/githelp.html">Git 101</a></li>
 				</ul>
 			</li>
 		</ul>
