--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,23 @@
  <!-- Contact.html -->
  <!Doctype>
- <html>
- Contact.html
- </html>
+ <!-- Header -->
+	<head>
+		<title><!-- replace with title --></title>
+		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="navigation.css">
+	</head>
+	<body>
+		<ul class="horizontal-nav clearfix">
+			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
+			<li>
+				<ul>
+					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
+					<li><a href="http://1bryon1.github.io/blog.html">Blog</a></li>
+					<li><a href="http://1bryon1.github.io/contact.html">Contact</a></li>
+					<li><a href="http://1bryon1.github.io/bands.html">Bands</a></li>
+					<li><a href="http://1bryon1.github.io/food.html">Food</a></li>
+					<li><a href="http://1bryon1.github.io/githelp.html">Git 101</a></li>
+				</ul>
+			</li>
+		</ul>
+<!--Header-->
