--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!-- INDEX.html -->
 <!DOCTYPE html>
 <html>
-<head>
-	<link rel="stylesheet" type="text/css" href="css.css">
-	<link rel="stylesheet" type="text/css" href="normalize.css">
-	<body><h1>Bryon Volmer</h1></body>
-		<ul>
-			<li>1bryon1
-			<li>1bryon1@users.noreply.github.com
-      		<li><a href="https://github.com/1bryon1/1bryon1.github.io"> Git Hub address from 1bryon1</a>
-      		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/index.html"> Git Hub HTML</a>
-      		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/css.css"> Git Hub CSS</a>
-      		<li><a href="https://github.com/1bryon1/1bryon1.github.io/blob/master/food.html"> Git Hub Food</a>
-      		<li><a href+"https://github.com/1bryon1/1bryon1.github.io/blob/master/githelp.html"> Git Hub Help</a>
-      			
-			<li> Location: North Lost Wages
-			<li>(no website...yet)
-		</li>
-	</ul>	
+<!-- Header -->
+	<head>
+		<title><!-- replace with title --></title>
+		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="navigation.css">
+	</head>
+	<body>
+		<ul class="horizontal-nav clearfix">
+			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
+			<li>
+				<ul>
+					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
+					<li><a href="http://1bryon1.github.io/blog.html">Blog</a></li>
+					<li><a href="http://1bryon1.github.io/contact.html">Contact</a></li>
+					<li><a href="http://1bryon1.github.io/bands.html">Bands</a></li>
+					<li><a href="http://1bryon1.github.io/food.html">Food</a></li>
+					<li><a href="http://1bryon1.github.io/githelp.html">Git 101</a></li>
+				</ul>
+			</li>
+		</ul>
 	<p>
 		<h2>"About Me"</h2>
 		<li><strong>History</strong> - Over 23 years in various roles throught the hospitality industry. These range from Hotel (front office/back of house); Special Event coordination which includes Grand Opening celebations, "building out" temporary warehouses for 50 day events; and transportation logistics from airport to destination locations.
