--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,5 @@
-<!Doctype>
+<!Doctype html>
+<html>
 <!-- Header -->
 	<head>
 		<title><!-- replace with title --></title>
@@ -7,7 +8,7 @@
 	</head>
 	<body>
 		<ul class="horizontal-nav clearfix">
-			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
+			<li><h1><a href="http://1bryon1.github.io/template.html">Bryon Volmer</a></h1></li>
 			<li>
 				<ul>
 					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
@@ -20,3 +21,4 @@
 			</li>
 		</ul>
 <!--Header-->
+</html>
