--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
  <!-- Contact.html -->
- <!Doctype>
+<!Doctype html>
+<html>
  <!-- Header -->
 	<head>
 		<title><!-- replace with title --></title>
@@ -8,7 +9,7 @@
 	</head>
 	<body>
 		<ul class="horizontal-nav clearfix">
-			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
+			<li><h1><a href="http://1bryon1.github.io/template.html">Bryon Volmer</a></h1></li>
 			<li>
 				<ul>
 					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
@@ -21,3 +22,4 @@
 			</li>
 		</ul>
 <!--Header-->
+</html>
