--- a/food.html
+++ b/food.html
@@ -1,5 +1,5 @@
 <!-- Food.html -->
-<!DOCTYPE html>
+<!Doctype html>
 <html>
 <!-- Header -->
 	<head>
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<ul class="horizontal-nav clearfix">
-			<li><h1><a href="http://1bryon1.github.io">Bryon Volmer</a></h1></li>
+			<li><h1><a href="http://1bryon1.github.io/template.html">Bryon Volmer</a></h1></li>
 			<li>
 				<ul>
 					<li><a href="http://1bryon1.github.io/index.html">About me</a></li>
@@ -22,3 +22,4 @@
 			</li>
 		</ul>
 <!--Header-->
+</html>
